# GUI-Skeleton

./: CMakeLists.txt
resources/: Main.glade
src/: CMakeLists.txt
src/app/: CMakeLists.txt  EventHandler.cpp  EventHandler.hpp  main.cpp
src/common/: TSQueue.hpp
src/gui/: Application.cpp  Application.hpp  CMakeLists.txt  Controller.cpp  Controller.hpp  Dispatcher.cpp  Dispatcher.hpp  Event.hpp  GUI.cpp  GUI.hpp  Update.hpp  Widgets.cpp  Widgets.hpp
